<resources>
    <string name="app_name">Test_LightIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_btn">Login</string>
    <string name="register_textview">Dont have an account? Sign Up</string>
    <string name="continue_wo_register_tv">Continue without registration</string>
    <string name="username_login_edt">Username</string>
    <string name="password_login_edt">Password</string>
    <string name="register_btn">Register</string>
    <string name="confirm_edt">Confirm Password</string>
    <string name="warning_password_empty">Password is empty</string>
    <string name="warning_username_empty">Username is empty</string>
    <string name="warning_data_empty">Please fill in all fields</string>
    <string name="result_success_login">Successful login</string>
    <string name="result_not_success_login">Invalid data, please try again</string>
    <string name="warning_reg_error">Something went wrong, please try again</string>
    <string name="post_comment_btn">Post</string>
    <string name="comment_text_hint">Leave a comment…</string>
    <string name="review_empty_warning">Please, enter a comment text</string>
    <string name="comment_added">Comment added</string>
    <string name="review_rating_warning">You should set a rating</string>
    <string name="menu_logout">Logout</string>
    <string name="empty_string"> </string>
    <string name="logout_warning">You can\'t logout when you\'re not logged in</string>
    <string name="review_token_expired">Looks like your token has expired, logout and sign up again</string>
    <string name="progress_bar_loading">Loading…</string>
    <string name="register_success">Account created</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="warning_missing_acc">Don\'t have an account?</string>
</resources>
