<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username_login_edt"
            android:ems="10"
            android:theme="@style/EditTextStyle"
            android:id="@+id/username_edt"
            android:layout_marginTop="256dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password_login_edt"
            android:inputType="textPassword"
            android:ems="10"
            android:theme="@style/EditTextStyle"
            android:id="@+id/password_edt" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username_edt"/>


    <Button
            android:text="@string/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:background="@drawable/btn_design"
            android:id="@+id/button_login" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="164dp" app:layout_constraintTop_toBottomOf="@+id/password_edt"
    />
    <TextView
            android:text="@string/continue_wo_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/btn_continue_wo_reg" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/register_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/btn_continue_wo_reg"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>